fix: add swagger doc for range report
